# bioguider

./: .bumpversion.cfg  .env.template  .gitignore  AGENTS.md  CLAUDE.md  ERROR_DETECTION_ANALYSIS_AND_SOLUTIONS.md  INSTALL.md  PROMPT_IMPROVEMENTS_FOR_ERROR_DETECTION.md  README.md  methods.md  pyproject.toml  quantifiable_testing_slides.md  requirements.txt  test_generation_report.py
bioguider/: conversation.py  file_handler.py
debug/: debug_generation_pipeline.py  debug_llm_generation.py  debug_overview_generation.py
logs/: BioGSP_evaluation_results_20251008.json  evaluation_report_github_fengsh27_BioGSP.json  evaluation_report_github_satijalab_seurat.json  popper_evaluation_results_20250829_111532.json  scanpy_evaluation_results_20250926.json  scanpy_evaluation_results_20250926_064724.json  seurat_evaluation_results_20250829_112435.json
system_tests/: analyze_benchmark_results.py  conftest.py  inspect_manifest.py  test_agent_utils.py  test_check_file_related_tool.py  test_collection_execute_step.py  test_collection_observe_step.py  test_collection_plan_step.py  test_collection_task.py  test_commonconversation.py  test_comprehensive_benchmark.py  test_consistency_collection_plan_step.py  test_consistency_collection_task.py  test_consistency_evaluation_task.py  test_count_syllables.py  test_count_syllables_with_pyphen.py  test_data_pipeline.py  test_dockergeneration_execute_step.py  test_dockergeneration_observe_step.py  test_dockergeneration_plan_step.py  test_dockergeneration_task.py  test_dockergeneration_task_utils.py  test_evaluation_identification_step.py  test_evaluation_installation_task.py  test_evaluation_manager.py  test_evaluation_readme_corrupted_task.py  test_evaluation_readme_task.py  test_evaluation_submission_requirements_task.py  test_evaluation_task.py  test_evaluation_tutorial_corrupted_task.py  test_evaluation_tutorial_task.py  test_evaluation_userguide_task.py  test_file_utils.py  test_generation_manager.py  test_generation_quantifiable.py  test_gitignore_checker.py  test_identification_agent.py  test_identification_execute_step.py  test_identification_observe_step.py  test_identification_plan_step.py  (+6 more)
tests/: conftest.py  test_agent_utils.py  test_conversation.py  test_utils.py  (+3 more)
(+71 files in other folders)
