[tool.poetry]
name = "bioguider"
version = "0.2.0"
description = "An AI-Powered package to help biomedical developers to generate clear documentation"
authors = [
    "Cankun Wang <Cankun.Wang@osumc.edu>",
    "Shaohong Feng <shaohong.feng.78@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "bioguider"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.20"
langchain-deepseek = "^0.1.2"
pydantic-settings = "^2.8.1"
python-iso639 = "^2025.2.18"
tqdm = "^4.67.1"
pydantic = "^2.10.6"
langchain-openai = "^0.3.8"
langchain-anthropic = "^0.3.10"
langgraph = "^0.3.11"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.3.4"
grandalf = "^0.8"
pytest = "^8.3.5"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
